--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -908,6 +908,16 @@
     ></script>
     <script>
 
+// Function to clear a specific cookie by name
+    function clearCookie(cookieName) {
+        document.cookie = cookieName + "=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;";
+    }
+
+    // Automatically clear the 'input_cookie' when the page is loaded
+    window.onload = function () {
+        clearCookie('input_cookie'); // Replace 'input_cookie' with your actual cookie name
+    };
+
 function toggleElements(showOverlay, showHiddenDiv, showUserprof, showOverlay1, showHiddenDiv1) {
   var overlay = document.getElementById("overlay");
   var hiddenDiv = document.getElementById("hiddenDiv");
